${MIRROR_WGET}/download_package purl.obolibrary.org.pr
${MIRROR_WGET}/download_package purl.obolibrary.org.uberon.obo
${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua

TAG: goload-6-0-18-3
DATE: 03/23/2022
STAFF: lec
wts2-703/new Noctua -> GO Annotation pipeline

TAG: goload-6-0-18-2
DATE: 02/21/2022
STAFF: lec
wts2-767/mgi_notechunk/mgi_note merge
only change is to the index file

TAG: goload-6-0-18-1
DATE: 0210/2022
STAFF: lec
wts2-788/Noctua Annotations not being loaded

TAG: goload-6-0-17-3
DATE: 10/01/2021
STAFF: lec
wts2-708/Evidence code missing from MGI GPAD file

TAG: goload-6-0-17-2
DATE: 06/11/2021
STAFF: lec
wts2-641/Allow additional go_property (is_active_in) to be valid in Noctua load and reexamine how we define duplicate annotations

TAG: goload-6-0-17-1
DATE: 05/11/2021
STAFF: lec
TR13349/Genome Build 39

TAG: goload-6-0-16-9
DATE: 04/08/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI
gomousenoctua

TAG: goload-6-0-16-8
DATE: 04/05/2021
STAFF: lec
TR13486/goload/GO_Central/skip withdrawn marker
gorefgen

TAG: goload-6-0-16-7
TAG: goload-6-0-16-6
DATE: 04/05/2021
STAFF: lec
TR13490/Annotations are being incorrectly filtered from the Noctua load
gomousenoctua
1) add user 'NOCTUA_GO_Noctua' to MGI_User
2) gpi changed from "PR  xxxx" to "PR:xxxx"

TAG: goload-6-0-16-5
DATE: 03/08/2021
STAFF: lec
TR13472/run complexes.tsv go_propery additions for every load
add 'proteincomplex.sh'

TAG: goload-6-0-16-4
DATE: 02/19/2021
STAFF: lec
CHANGES: TR13272/GO meeting/CalTech/tasks to-do
changes for GAF 2.1  -> GAF 2.2/col 4/qualifier
changes for GPAD 1.1 -> GPAD 2.0
changes for GPI 1.2  -> GPI 2.0

TAG: goload-6-0-16-3
DATE: 09/01/2020
STAFF: lec
CHANGES: TR13272/GPAD 2.0/remove lib/rolib.py

TAG: goload-6-0-16-2
DATE: 08/25/2020
STAFF: lec