@@ -158,3 +158,9 @@ checkStatus ${STAT} "${GOLOAD}/gomousenoctua/echocheck.sh"
 #
 shutDown
 
+#
+# invalid reference format for harold/nancy
+#
+cd ${OUTPUTDIR}
+rm -rf pubmed.error
+grep "Invalid Reference" ${INFILE_NAME_ERROR} >  pubmed.error
