@@ -5,10 +5,12 @@ ${MIRROR_WGET}/download_package ftp.geneontology.org.goload
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload
 ${MIRROR_WGET}/download_package snapshot.geneontology.org.goload.noctua
 
+TAG: goload-6-0-18-4
 TAG: goload-6-0-18-3
-DATE: 03/23/2022
+DATE: 03/23/2022, 04/07/2022
 STAFF: lec
 wts2-703/new Noctua -> GO Annotation pipeline
+add generation of pubmed.error to end of gomousenoctua/gomousenoctua.sh
 
 TAG: goload-6-0-18-2
 DATE: 02/21/2022
